footer spacing fixed on sm device

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -473,12 +473,24 @@ body {
   padding-top: 22px;
   padding-bottom: 34px;
 }
+@media (max-width: 767px) {
+  .footer-bottom {
+    padding-top: 27px;
+    padding-bottom: 15px;
+  }
+}
 .footer-bottom p {
   font-size: 16px;
   color: #333333;
   line-height: 24px;
   text-align: center;
   text-transform: capitalize;
+}
+@media (max-width: 767px) {
+  .footer-bottom p {
+    font-size: 9px;
+    line-height: 13.9px;
+  }
 }
 @media (max-width: 991px) {
   .footer-info {
