--- a/assets/scss/layouts/_footer.scss
+++ b/assets/scss/layouts/_footer.scss
@@ -35,12 +35,25 @@
 		padding-top: 22px;
 		padding-bottom: 34px;
 
+
+		@include max(767px) {
+			padding-top: 27px;
+			padding-bottom: 15px;
+		}
+
+
 		p {
 			font-size: 16px;
 			color: #333333;
 			line-height: 24px;
 			text-align: center;
 			text-transform: capitalize;
+
+			@include max(767px) { 
+				font-size: 9px;
+				line-height: 13.9px;
+			}
+
 		}
 	}
 
